[package]
name = "datarouter"
version = "0.1.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]

[[bin]]
name = "datarouter"
path = "src/main.rs"

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0.9"
serde_json = "1.0"
serde_derive = "1.0.9"
postgres = { version = "0.14.2", features = ["with-chrono", "with-serde_json"] }
chrono = "0.3" # postgres does not support chrono 0.4 yet https://github.com/sfackler/rust-postgres/issues/276
biscuit = "0.0.6"

[dev-dependencies]
reqwest = "0.7.1"
